--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = neighb"
+    "recoleta_marker = neighboorhood_markers[1]"
    ]
   },
   {
